--- a/DjangoOtp/templates/base.html
+++ b/DjangoOtp/templates/base.html
@@ -1,3 +1,11 @@
 <html>
-    
+    <head>
+        <title>
+            Django otp verification
+        </title>
+    </head>
+    <body>
+        {% block content %}
+        {% endblock content %}
+    </body>
 </html>
